--- a/home.html
+++ b/home.html
@@ -20,8 +20,7 @@
         <label class = "logo">Nordeste Tur</label>
         <ul>
             <li><a href="./rotas.html">Rotas</a></li>
-            <li><a href="#">Frotas</a></li>
-            <li><a href="#">Nossa historia</a></li>
+            <li><a href="./frotas.html">Frotas</a></li>
             
         </ul>     
     </nav>
