--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
         <ul>
             <li><a href="./rotas.html">Rotas</a></li>
             <li><a href="./frotas.html">Frotas</a></li>
+            <li><a href="./nossahistoria.html">Nossa historia</a></li>
             
         </ul>     
     </nav>
