--- a/novosfuncionarios.html
+++ b/novosfuncionarios.html
@@ -30,6 +30,10 @@
     <div>
         <form action="" method="post" class="container">
             <div>
+            <div>
+                <h1>Contratação de funcinários:</h1>
+                <hr><br>
+            </div>
                 <label>
                     NOME: <input type="text" placeholder="informe seu nome">
                 </label>
