--- a/rotas.html
+++ b/rotas.html
@@ -20,8 +20,8 @@
         <label class = "logo">Nordeste Tur</label>
         <ul>
             <li><a href="./home.html">Home</a></li>
-            <li><a href="#">Frotas</a></li>
-            <li><a href="#">Nossa historia</a></li>    
+            <li><a href="./frotas.html">Frotas</a></li>
+            <li><a href="./nossahistoria.html">Nossa historia</a></li>    
         </ul>     
     </nav>
 
