--- a/home.html
+++ b/home.html
@@ -22,6 +22,8 @@
             <li><a href="./rotas.html">Rotas</a></li>
             <li><a href="./frotas.html">Frotas</a></li>
             <li><a href="./nossahistoria.html">Nossa historia</a></li>
+            <li><a href="./abrirchamado.html">Abrir chamado</a></li>
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li>
             
         </ul>     
     </nav>
