--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -22,10 +22,15 @@
             <li><a href="./frotas.html">Frotas</a></li>    
         </ul>     
     </nav>
+    <div>
+        <h1>Nossa História</h1>
+    </div>
+    <div class="centro">
+        <img src="./img/nossahistoria.jpg" alt="">
 
-    <img src="./img/nossahistoria.jpg" alt="">
+    </div>
 
-    <p>Fundada em 2014 no RN, a Nordeste Tur é uma empresa criada a partir do sonho de dois amigos que buscavam ligar pessoas a destinos. Francisco Ruan Balbino e Isaac Roberto dos Santos se conheceram ainda no ensino médio e mesmo jovens sonhavam em trabalhar juntos.</p> 
+    <p>Fundada em 2014 no RN, a Nordeste Tur é uma empresa criada a partir do sonho de dois amigos que buscavam ligar pessoas a <em>destinos</em>. Francisco Ruan Balbino e Isaac Roberto dos Santos se conheceram ainda no ensino médio e mesmo jovens sonhavam em trabalhar juntos.</p> 
 
         <p>A Nordeste Tur é a realização do sonho desses dois jovens. Depois que terminaram o ensino médio, cada um seguiu uma faculdade diferente, mas o sonho de seguir juntos para a formação da empresa continuou e eles continuaram se organizando para fundar sua agência de ônibus.</p>
         
