--- a/frotas.html
+++ b/frotas.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frotas de ônibus</title>
+        <title>Frotas de ônibus</title>
 
      <!-- Estilos -->
      <link rel="stylesheet" href="./css/styles.css">
      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -19,7 +20,9 @@
         <ul>
             <li><a href="./home.html">Home</a></li>
             <li><a href="./rotas.html">Rotas</a></li>
-            <li><a href="./nossahistoria.html">Nossa historia</a></li>    
+            <li><a href="./nossahistoria.html">Nossa historia</a></li> 
+            <li><a href="./abrirchamado.html">Abrir chamado</a></li>
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li>   
         </ul>     
     </nav>
 
@@ -38,9 +41,9 @@
             </tr>
 
             <tr valing="middle">
-                <th>Não</th>
-                <th>Sim</th>
-                <th>Não</th>
+                <td><i class="fa fa-remove"></i></td>
+                <td><i class="fa fa-check"></i></td>
+                <td><i class="fa fa-remove"></i></td>
                 <th>22/10/2020</th>
             </tr>
     </div>
@@ -49,8 +52,7 @@
     <div class = "MediumFrota">
         <img class = "MediumBus" src="./img/medio.jpg" alt="medio" width="400" height="300">
 
-        <table class="basic" border="1">
-
+        <table>
             <tr valing="middle">
                 <th>Leitos</th>
                 <th>Banheiros</th>
@@ -59,9 +61,9 @@
             </tr>
 
             <tr valing="middle">
-                <th>Não</th>
-                <th>Sim</th>
-                <th>Sim</th>
+                <td><i class="fa fa-remove"></i></td>
+                <td><i class="fa fa-check"></i></td>
+                <td><i class="fa fa-check"></i></td>
                 <th>22/10/2020</th>
             </tr>
     </div>
@@ -80,9 +82,9 @@
             </tr>
 
             <tr valing="middle">
-                <th>Sim</th>
-                <th>Sim</th>
-                <th>Sim</th>
+                <td><i class="fa fa-check"></i></td>
+                <td><i class="fa fa-check"></i></td>
+                <td><i class="fa fa-check"></i></td>
                 <th>22/10/2020</th>
             </tr>
     </div>
