--- a/home.html
+++ b/home.html
@@ -27,7 +27,20 @@
             
         </ul>     
     </nav>
+    <h1 class="title">Seja Bem-Vindo a Nordeste Tur</h1>
+    <h2 class="subtitle">Viaje com maior conforto e segurança</h2>
+    <div class="centro">
+        <img src="./img/home.jpg" alt="home" width="50%" height="20%">
+    </div>
+    <div class="footer">
+        <h1 class="centro">Contatos</h1>
+        <ul>NÚMERO: (84) 99999-9999 ou (84) 90000-0000</ul>
+        <ul>E-mail: nordestetur@gmail.com</ul>
+        <ul>End.: Av. Capitão M. Gouveia - 1237, Cidade Esperança, Natal - RN  
+            CNPJ: 08.324.808/0001-36</ul>
 
+
+    </div>
     
 </body>
 
