--- a/nossahistoria.html
+++ b/nossahistoria.html
@@ -19,7 +19,9 @@
         <ul>
             <li><a href="./home.html">Home</a></li>
             <li><a href="./rotas.html">Rotas</a></li>
-            <li><a href="./frotas.html">Frotas</a></li>    
+            <li><a href="./frotas.html">Frotas</a></li>
+            <li><a href="./abrirchamado.html">Abrir chamado</a></li>
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li>   
         </ul>     
     </nav>
     <div>
