--- a/rotas.html
+++ b/rotas.html
@@ -21,13 +21,16 @@
         <ul>
             <li><a href="./home.html">Home</a></li>
             <li><a href="./frotas.html">Frotas</a></li>
-            <li><a href="./nossahistoria.html">Nossa historia</a></li>    
+            <li><a href="./nossahistoria.html">Nossa historia</a></li> 
+            <li><a href="./abrirchamado.html">Abrir chamado</a></li>
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li>   
         </ul>     
     </nav>
-
+    <h1 class="title">Rotas</h1>
+    <hr>
     <!-- Tabela de Rotas 1 -->
     <table class="tabRota1" border="1">
-
+    
         <tr valing="middle">
             <th>De Natal para Recife</th>
             <th>De Natal para João Pessoa</th>
