--- a/novosfuncionarios.html
+++ b/novosfuncionarios.html
@@ -27,8 +27,8 @@
         </ul>     
     </nav>
 
-    <div>
-        <form action="" method="post" class="container">
+    <div class="container">
+        <form action="" method="post">
             <div>
             <div>
                 <h1>Contratação de funcinários:</h1>
@@ -71,7 +71,7 @@
                 </label>
             </div>
             <div>
-                <button type="button">ENVIAR!</button>
+                <input type="submit" value="ENVIAR!">
             </div>
         </form>
     </div>
