--- a/rotas.html
+++ b/rotas.html
@@ -31,7 +31,7 @@
     <!-- Tabela de Rotas 1 -->
     <table class="tabRota1" border="1">
     
-        <tr valing="middle">
+        <tr class="title-table" valing="middle">
             <th>De Natal para Recife</th>
             <th>De Natal para João Pessoa</th>
             <th>De Teresina para Fortaleza</th>
@@ -64,7 +64,7 @@
     <!-- Tabela de rotas 2 -->
     <table class="tabRota2" border="1">
 
-        <tr valing="middle">
+        <tr class="title-table" valing="middle">
             <th>De Teresina para São Luís</th>
             <th>De Aracaju para Salvador</th>
         </tr>
