--- a/home.html
+++ b/home.html
@@ -28,9 +28,13 @@
         </ul>     
     </nav>
     <h1 class="title">Seja Bem-Vindo a Nordeste Tur</h1>
+    <hr><br>
     <h2 class="subtitle">Viaje com maior conforto e segurança</h2>
+    <h3> Esolha um dos ônibus da nossa frota e viaje com o melhor do conforte e segurança.</h3>
     <div class="centro">
         <img src="./img/home.jpg" alt="home" width="50%" height="20%">
+        <img src="./img/Home2.jpg" alt="home" width="50%" height="20%">
+        <img src="./img/home3.jpg" alt="home" width="50%" height="20%"> 
     </div>
     <div class="footer">
         <h1 class="centro">Contatos</h1>
