--- a/novosfuncionarios.html
+++ b/novosfuncionarios.html
@@ -23,9 +23,10 @@
             <li><a href="./frotas.html">Frotas</a></li>
             <li><a href="./nossahistoria.html">Nossa historia</a></li>
             <li><a href="./abrirchamado.html">Abrir chamado</a></li>
-            
-        </ul>     
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li> 
+        </ul>   
     </nav>
+    <br>
 
     <div class="container">
         <form action="" method="post">
