--- a/abrirchamado.html
+++ b/abrirchamado.html
@@ -19,9 +19,11 @@
             <li><a href="./rotas.html">Rotas</a></li>
             <li><a href="./frotas.html">Frotas</a></li>
             <li><a href="./nossahistoria.html">Nossa historia</a></li>
-            <li><a href="./novosfuncionarios.html">Novos funcionários</a></li>      
-        </ul>     
+            <li><a href="./abrirchamado.html">Abrir chamado</a></li>
+            <li><a href="./novosfuncionarios.html">Contratação de funcionários</a></li> 
+        </ul>  
     </nav>
+    <br>
 
     <div>
         <h1>Chamados:</h1>
